<resources>
    <string name="app_name">VLogMaster</string>
    <string name="notice">Notice</string>
    <string name="ok">OK</string>
    <string name="permission_message">Please enable the Permission for continue.</string>
    <string name="resolution_setting">Resolution</string>
    <string name="screen_1080P">1080P</string>
    <string name="screen_720P">720P&#160;</string>
    <string name="time_interval">Interval Time</string>
    <string name="second_0.5">0.5 seconds</string>
    <string name="second_1">1 second</string>
    <string name="second_2">2 seconds</string>
    <string name="second_3">3 seconds</string>
    <string name="second_4">4 seconds</string>
    <string name="second_5">5 seconds</string>
    <string name="second_6">6 seconds</string>
    <string name="second_7">7 seconds</string>
    <string name="second_8">8 seconds</string>
    <string name="second_9">9 seconds</string>
    <string name="second_10">10 seconds</string>
    <string name="second_20">20 seconds</string>
    <string name="second_30">30 seconds</string>
    <string name="second_60">60 seconds</string>
    <string name="second_120">120 seconds</string>
    <string name="second_180">180 seconds</string>
    <string name="time_long">Shooting Time</string>
    <string name="minute_10">10 minutes</string>
    <string name="minute_20">20 minutes</string>
    <string name="minute_30">30 minutes</string>
    <string name="hour_1">1 hour</string>
    <string name="hour_2">2 hours</string>
    <string name="hour_3">3 hours</string>
    <string name="hour_6">6 hours</string>
    <string name="infinite">Infinite</string>
    <string name="give_me_a_thumb">Give me a thumb</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share to Friend</string>
    <string name="about">About</string>
    <string name="second">second</string>
    <string name="main_time_interval">Time interval:  %s Secs</string>
    <string name="main_recording_duration">Recording duration:  %s</string>
    <string name="main_video_duration">Video duration:  %s</string>
    <string name="video_save_success">Video saved success at %s</string>
    <string name="Share_VLog_Title">Share VLogerMaster to friend</string>
    <string name="Share_VLog_Text">Hey, check this awesome app, you will like it, have fun! VLogMaster!</string>
    <string name="Share_To_Friend_Chooser_Title">Share to friend</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="About_desc">Thanks for using VLogMaster, please feel free to contact us if you have any suggest or problem about this app, Thanks!</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
