<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/give_me_a_thumb"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/give_me_a_thumb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:id="@+id/feedback"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:id="@+id/share"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:id="@+id/about"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>