<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/time_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="gone"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/minute_10"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/minute_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_check"
                android:id="@+id/minute_10_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:id="@+id/minute_20"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/minute_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="invisible"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_check"
                android:id="@+id/minute_20_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:id="@+id/minute_30"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/minute_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="invisible"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_check"
                android:id="@+id/minute_30_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:id="@+id/hour_1"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/hour_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="invisible"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_check"
                android:id="@+id/hour_1_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>



    <LinearLayout
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:id="@+id/hour_2"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/hour_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="invisible"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_check"
                android:id="@+id/hour_2_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:id="@+id/hour_3"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/hour_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="invisible"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_check"
                android:id="@+id/hour_3_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:id="@+id/hour_6"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/hour_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="invisible"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_check"
                android:id="@+id/hour_6_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:id="@+id/infinite"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_marginLeft="30dp"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/infinite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="invisible"
                android:layout_marginLeft="30dp"
                android:src="@drawable/ic_check"
                android:id="@+id/infinite_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>