<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/resolution_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:id="@+id/screen_1080"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/screen_1080P"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_check"
                android:id="@+id/screen_1080_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:id="@+id/screen_720"
            android:focusable="true"
            android:clickable="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:text="@string/screen_720P"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:visibility="invisible"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_check"
                android:id="@+id/screen_720_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>